export const snapshot = {};

snapshot[`Typegraph using temporal 1`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start": 1,
          "query": 6,
          "signal": 8,
          "describe": 12
        },
        "required": [
          "start",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "root_start_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_start_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "task_queue": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "root_start_fn_input_workflow_id_string",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "root_start_fn_input_args_root_start_fn_input_args_struct_list",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "object",
        "title": "root_start_fn_input_args_struct",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "some_field": 3
        },
        "required": []
      },
      {
        "type": "function",
        "title": "root_query_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 3,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_query_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "function",
        "title": "root_signal_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 9,
        "output": 11,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_signal_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 10,
          "run_id": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "root_signal_fn_input_workflow_id_string",
        "runtime": 1,
        "policies": [],
        "injection": {
          "source": "static",
          "data": {
            "value": "\\\\"1234\\\\""
          }
        },
        "config": {},
        "as_id": false
      },
      {
        "type": "boolean",
        "title": "root_signal_fn_output",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "root_describe_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 13,
        "output": 14,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_describe_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3
        },
        "required": []
      },
      {
        "type": "object",
        "title": "root_describe_fn_output",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start_time": 15,
          "close_time": 17,
          "state": 18
        },
        "required": []
      },
      {
        "type": "optional",
        "title": "root_describe_fn_output_start_time_root_describe_fn_output_start_time_integer_optional",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 16,
        "default_value": null
      },
      {
        "type": "integer",
        "title": "root_describe_fn_output_start_time_integer",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "root_describe_fn_output_close_time_root_describe_fn_output_start_time_integer_optional",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 16,
        "default_value": null
      },
      {
        "type": "optional",
        "title": "root_describe_fn_output_state_root_describe_fn_output_start_time_integer_optional",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 16,
        "default_value": null
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "<workflow_type>"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "<query_type>"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "<signal_name>"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "<name>",
          "host_secret": "<host_secret>",
          "namespace_secret": "<ns_secret>"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;

snapshot[`Typegraph using temporal 2`] = `
'[
  {
    "types": [
      {
        "type": "object",
        "title": "temporal",
        "runtime": 0,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "startKv": 1,
          "query": 6,
          "signal": 10,
          "describe": 15
        },
        "required": [
          "startKv",
          "query",
          "signal",
          "describe"
        ]
      },
      {
        "type": "function",
        "title": "root_startKv_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 2,
        "output": 3,
        "materializer": 0,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_startKv_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "task_queue": 3,
          "args": 4
        },
        "required": []
      },
      {
        "type": "string",
        "title": "root_startKv_fn_input_workflow_id_string",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "list",
        "title": "root_startKv_fn_input_args_root_startKv_fn_input_args_struct_list",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 5
      },
      {
        "type": "object",
        "title": "root_startKv_fn_input_args_struct",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {},
        "required": []
      },
      {
        "type": "function",
        "title": "root_query_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 7,
        "output": 9,
        "materializer": 2,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_query_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 8
        },
        "required": []
      },
      {
        "type": "list",
        "title": "root_query_fn_input_args_root_startKv_fn_input_workflow_id_string_list",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 3
      },
      {
        "type": "optional",
        "title": "root_query_fn_output",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 3,
        "default_value": null
      },
      {
        "type": "function",
        "title": "root_signal_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 11,
        "output": 14,
        "materializer": 3,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_signal_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3,
          "args": 12
        },
        "required": []
      },
      {
        "type": "list",
        "title": "root_signal_fn_input_args_root_signal_fn_input_args_struct_list",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "items": 13
      },
      {
        "type": "object",
        "title": "root_signal_fn_input_args_struct",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "key": 3,
          "value": 3
        },
        "required": []
      },
      {
        "type": "boolean",
        "title": "root_signal_fn_output",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "function",
        "title": "root_describe_fn",
        "runtime": 1,
        "policies": [
          0
        ],
        "config": {},
        "as_id": false,
        "input": 16,
        "output": 17,
        "materializer": 4,
        "rate_weight": null,
        "rate_calls": false
      },
      {
        "type": "object",
        "title": "root_describe_fn_input",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "workflow_id": 3,
          "run_id": 3
        },
        "required": []
      },
      {
        "type": "object",
        "title": "root_describe_fn_output",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "properties": {
          "start_time": 18,
          "close_time": 20,
          "state": 21
        },
        "required": []
      },
      {
        "type": "optional",
        "title": "root_describe_fn_output_start_time_root_describe_fn_output_start_time_integer_optional",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 19,
        "default_value": null
      },
      {
        "type": "integer",
        "title": "root_describe_fn_output_start_time_integer",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false
      },
      {
        "type": "optional",
        "title": "root_describe_fn_output_close_time_root_describe_fn_output_start_time_integer_optional",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 19,
        "default_value": null
      },
      {
        "type": "optional",
        "title": "root_describe_fn_output_state_root_describe_fn_output_start_time_integer_optional",
        "runtime": 1,
        "policies": [],
        "config": {},
        "as_id": false,
        "item": 19,
        "default_value": null
      }
    ],
    "materializers": [
      {
        "name": "start_workflow",
        "runtime": 1,
        "effect": {
          "effect": "create",
          "idempotent": false
        },
        "data": {
          "workflow_type": "keyValueStore"
        }
      },
      {
        "name": "predefined_function",
        "runtime": 0,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "name": "true"
        }
      },
      {
        "name": "query_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {
          "query_type": "getValue"
        }
      },
      {
        "name": "signal_workflow",
        "runtime": 1,
        "effect": {
          "effect": "update",
          "idempotent": false
        },
        "data": {
          "signal_name": "setValue"
        }
      },
      {
        "name": "describe_workflow",
        "runtime": 1,
        "effect": {
          "effect": "read",
          "idempotent": true
        },
        "data": {}
      }
    ],
    "runtimes": [
      {
        "name": "deno",
        "data": {
          "worker": "default",
          "permissions": {}
        }
      },
      {
        "name": "temporal",
        "data": {
          "name": "test",
          "host_secret": "HOST",
          "namespace_secret": "NAMESPACE"
        }
      }
    ],
    "policies": [
      {
        "name": "__public",
        "materializer": 1
      }
    ],
    "meta": {
      "prefix": null,
      "secrets": [],
      "queries": {
        "dynamic": true,
        "endpoints": []
      },
      "cors": {
        "allow_origin": [],
        "allow_headers": [],
        "expose_headers": [],
        "allow_methods": [],
        "allow_credentials": true,
        "max_age_sec": null
      },
      "auths": [],
      "rate": null,
      "version": "0.0.3",
      "randomSeed": null,
      "artifacts": {}
    }
  }
]'
`;
